fixes #1271 to add OpenShift OAuth support if enabled in the configuration

--- a/public/ng/css/gogs.css
+++ b/public/ng/css/gogs.css
@@ -206,6 +206,12 @@ img.avatar-100 {
 .social-buttons .qq:hover {
   background-color: #3cb3ff;
 }
+.social-buttons .openshift {
+  background-color: #db212f;
+}
+.social-buttons .openshift:hover {
+  background-color: #b21b27;
+}
 .main-wrapper {
   padding: 20px 0 40px;
 }
